# amz_listing_management_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  FILES_INDEX.md  README.md  debug_category_mapping.py  debug_price_api.py  main.py  pyproject.toml  requirements.txt  update_category_mappings.py
README/: 1.8 组装发品文件功能实现说明.md  README.md
config/amz_listing_data_mapping/: amz_mapping.json  category_mapping.json
config/api_clients/: deepseek.yaml
config/pricing/: amz_pricing_config.yaml
debug_output/: price_api_debug_20251109_013430.json
infrastructure/: db_pool.py  exceptions.py  logging_config.py  validators.py
infrastructure/giga/: __init__.py  api_client.py  config.py  token_manager.py
infrastructure/llm/: __init__.py  factory.py  interface.py  types.py
migrations/: amazon_cat_templates.sql  amz_listing_log.sql  create_ds_api_product_details.sql  create_giga_price_tables.sql  create_giga_tables.sql  create_listing_log_table.sql  fix_giga_price_unique.sql  init_db.sql  setup_pricing_system.sql
scripts/: io_server.py  io_server2.py  llm_smoke_test.py
src/: main.py
src/repositories/: amz_full_list_report_repository.py  amz_listing_data_repository.py  amz_listing_log_repository.py  amz_template_repository.py  category_repository.py  giga_product_inventory_repository.py  giga_product_price_repository.py  giga_product_sync_repository.py  llm_product_detail_repository.py  pricing_repository.py  product_data_repository.py  product_listing_repository.py  (+1 more)
template_files/: BATHTUB_SHOWER_TRIM_KIT.xlsm  CABINET.xlsm  HOME_MIRROR.xlsm
(+28 files in other folders)
